refactor: update SIRI ET endpoint to use ResponseEntity, replace Helsinki ZoneId with DateProvider constant, and improve readability in tests with getFirst()