@@ -13,7 +13,9 @@ import fi.livi.rata.avoindata.updater.service.siri.common.OperatorRef;
 import fi.livi.rata.avoindata.updater.service.siri.common.ResolvedJourney;
 import fi.livi.rata.avoindata.updater.service.siri.common.ServiceJourneyId;
 import fi.livi.rata.avoindata.updater.service.siri.common.SiriStopResolver;
-import fi.livi.rata.avoindata.updater.service.siri.common.SiriTimeConverter;
+
+import static fi.livi.rata.avoindata.common.utils.DateProvider.ZONE_ID_HKI;
+
 import fi.livi.rata.avoindata.updater.service.siri.common.SiriWritingService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -44,9 +46,8 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class SiriEtServiceTest {
 
-    private static final ZoneId HELSINKI = SiriTimeConverter.HELSINKI_ZONE;
     private static final LocalDate DEPARTURE_DATE = LocalDate.of(2026, 7, 15);
-    private static final ZonedDateTime NOW = ZonedDateTime.of(2026, 7, 15, 12, 0, 0, 0, HELSINKI);
+    private static final ZonedDateTime NOW = ZonedDateTime.of(2026, 7, 15, 12, 0, 0, 0, ZONE_ID_HKI);
     private static final String PRODUCER_REF = "TEST";
     private static final String DATA_SOURCE = "FSR";
 
@@ -173,17 +174,17 @@ class SiriEtServiceTest {
         final GTFSTrain train = createTrain(59L, false);
         // Origin: DEPARTURE only
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         // Middle stops: ARRIVAL + DEPARTURE
         addStop(train, "TPE",
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI), "1");
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI), "1");
         addStop(train, "TKU",
-                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, HELSINKI), "3");
+                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, ZONE_ID_HKI), "3");
         // Terminus: ARRIVAL only
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
         return train;
     }
 
@@ -194,13 +195,15 @@ class SiriEtServiceTest {
         assertNotNull(deliveries);
         assertFalse(deliveries.isEmpty());
         final List<EstimatedVersionFrameStructure> frames =
-                deliveries.get(0).getEstimatedJourneyVersionFrames();
+                deliveries.getFirst().getEstimatedJourneyVersionFrames();
         assertNotNull(frames);
         assertFalse(frames.isEmpty());
-        return frames.get(0).getEstimatedVehicleJourneies();
+        return frames.getFirst().getEstimatedVehicleJourneies();
     }
 
-    /** EVJs tolerating an absent delivery/frame — an empty feed emits a bare delivery with no frame. */
+    /**
+     * EVJs tolerating an absent delivery/frame — an empty feed emits a bare delivery with no frame.
+     */
     private List<EstimatedVehicleJourney> getEvjsOrEmpty(final Siri siri) {
         final List<EstimatedTimetableDeliveryStructure> deliveries =
                 siri.getServiceDelivery().getEstimatedTimetableDeliveries();
@@ -208,11 +211,11 @@ class SiriEtServiceTest {
             return List.of();
         }
         final List<EstimatedVersionFrameStructure> frames =
-                deliveries.get(0).getEstimatedJourneyVersionFrames();
+                deliveries.getFirst().getEstimatedJourneyVersionFrames();
         if (frames == null || frames.isEmpty()) {
             return List.of();
         }
-        return frames.get(0).getEstimatedVehicleJourneies();
+        return frames.getFirst().getEstimatedVehicleJourneies();
     }
 
     // ===== AREA 1 — EVJ structure & journey ref =====
@@ -243,7 +246,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertNotNull(evj.getFramedVehicleJourneyRef());
         assertEquals("2026-07-15", evj.getFramedVehicleJourneyRef().getDataFrameRef().getValue());
         assertEquals("FTR:ServiceJourney:59-12345", evj.getFramedVehicleJourneyRef().getDatedVehicleJourneyRef());
@@ -260,7 +263,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertNotNull(evj.getLineRef());
         assertEquals("FTR:Line:IC", evj.getLineRef().getValue());
     }
@@ -276,7 +279,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertEquals("FSR", evj.getDataSource());
     }
 
@@ -291,7 +294,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertNotNull(evj.getDirectionRef());
         assertEquals("0", evj.getDirectionRef().getValue());
     }
@@ -305,18 +308,18 @@ class SiriEtServiceTest {
         // given — 3-stop train, no actualTime on any row
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "TPE",
-                ZonedDateTime.of(2026, 7, 15, 15, 30, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 15, 35, 0, 0, HELSINKI), "1");
+                ZonedDateTime.of(2026, 7, 15, 15, 30, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 15, 35, 0, 0, ZONE_ID_HKI), "1");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 18, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 18, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var recordedCalls = evj.getRecordedCalls();
         final var estimatedCalls = evj.getEstimatedCalls();
         assertTrue(recordedCalls == null || recordedCalls.getRecordedCalls().isEmpty());
@@ -332,34 +335,34 @@ class SiriEtServiceTest {
         final GTFSTrain train = createTrain(59L, false);
         // Origin
         final GTFSTimeTableRow dep1 = createRow(train, "HKI", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI));
-        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI));
+        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, ZONE_ID_HKI);
         dep1.commercialTrack = "7";
         train.timeTableRows.add(dep1);
         // Stop 2
         final GTFSTimeTableRow arr2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
-        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
+        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, ZONE_ID_HKI);
         arr2.commercialTrack = "1";
         train.timeTableRows.add(arr2);
         final GTFSTimeTableRow dep2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
-        dep2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
+        dep2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, ZONE_ID_HKI);
         dep2.commercialTrack = "1";
         train.timeTableRows.add(dep2);
         // Stop 3 — no actuals
         addStop(train, "TKU",
-                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, HELSINKI), "3");
+                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, ZONE_ID_HKI), "3");
         // Terminus — no actuals
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertEquals(2, evj.getRecordedCalls().getRecordedCalls().size());
         assertEquals(2, evj.getEstimatedCalls().getEstimatedCalls().size());
     }
@@ -371,35 +374,35 @@ class SiriEtServiceTest {
         // given — same 4-stop train from ET-07
         final GTFSTrain train = createTrain(59L, false);
         final GTFSTimeTableRow dep1 = createRow(train, "HKI", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI));
-        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI));
+        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, ZONE_ID_HKI);
         dep1.commercialTrack = "7";
         train.timeTableRows.add(dep1);
         final GTFSTimeTableRow arr2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
-        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
+        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, ZONE_ID_HKI);
         arr2.commercialTrack = "1";
         train.timeTableRows.add(arr2);
         final GTFSTimeTableRow dep2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
         dep2.commercialTrack = "1";
         train.timeTableRows.add(dep2);
         addStop(train, "TKU",
-                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, HELSINKI), "3");
+                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, ZONE_ID_HKI), "3");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final List<RecordedCall> recorded = evj.getRecordedCalls().getRecordedCalls();
         final List<EstimatedCall> estimated = evj.getEstimatedCalls().getEstimatedCalls();
-        assertEquals(1, recorded.get(0).getOrder().intValue());
+        assertEquals(1, recorded.getFirst().getOrder().intValue());
         assertEquals(2, recorded.get(1).getOrder().intValue());
-        assertEquals(3, estimated.get(0).getOrder().intValue());
+        assertEquals(3, estimated.getFirst().getOrder().intValue());
         assertEquals(4, estimated.get(1).getOrder().intValue());
     }
 
@@ -410,16 +413,16 @@ class SiriEtServiceTest {
         // given — a 3-stop future train whose rows are added in scrambled order
         final GTFSTrain train = createTrain(59L, false);
         final GTFSTimeTableRow olArr = createRow(train, "OL", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI));
         olArr.commercialTrack = "1";
         final GTFSTimeTableRow hkiDep = createRow(train, "HKI", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI));
         hkiDep.commercialTrack = "7";
         final GTFSTimeTableRow tpeArr = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
         tpeArr.commercialTrack = "1";
         final GTFSTimeTableRow tpeDep = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
         tpeDep.commercialTrack = "1";
         train.timeTableRows.add(olArr);
         train.timeTableRows.add(tpeDep);
@@ -430,13 +433,13 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then — calls come out in schedule order HKI(1), TPE(2), OL(3)
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final List<EstimatedCall> calls = evj.getEstimatedCalls().getEstimatedCalls();
         assertEquals(3, calls.size());
-        assertEquals("FSR:Quay:HKI-7", calls.get(0).getStopPointRef().getValue());
+        assertEquals("FSR:Quay:HKI-7", calls.getFirst().getStopPointRef().getValue());
         assertEquals("FSR:Quay:TPE-1", calls.get(1).getStopPointRef().getValue());
         assertEquals("FSR:Quay:OL-1", calls.get(2).getStopPointRef().getValue());
-        assertEquals(1, calls.get(0).getOrder().intValue());
+        assertEquals(1, calls.getFirst().getOrder().intValue());
         assertEquals(2, calls.get(1).getOrder().intValue());
         assertEquals(3, calls.get(2).getOrder().intValue());
     }
@@ -448,29 +451,29 @@ class SiriEtServiceTest {
         // given — stop 2 has arrival.actualTime set, departure.actualTime null
         final GTFSTrain train = createTrain(59L, false);
         final GTFSTimeTableRow dep1 = createRow(train, "HKI", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI));
-        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI));
+        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, ZONE_ID_HKI);
         dep1.commercialTrack = "7";
         train.timeTableRows.add(dep1);
         // Stop 2: arrival has actualTime, departure does not
         final GTFSTimeTableRow arr2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
-        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
+        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, ZONE_ID_HKI);
         arr2.commercialTrack = "1";
         train.timeTableRows.add(arr2);
         final GTFSTimeTableRow dep2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
-        dep2.liveEstimateTime = ZonedDateTime.of(2026, 7, 15, 9, 37, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
+        dep2.liveEstimateTime = ZonedDateTime.of(2026, 7, 15, 9, 37, 0, 0, ZONE_ID_HKI);
         dep2.commercialTrack = "1";
         train.timeTableRows.add(dep2);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final List<RecordedCall> recorded = evj.getRecordedCalls().getRecordedCalls();
         // Stop 2 is a RecordedCall (has arrival.actualTime)
         assertTrue(recorded.size() >= 2);
@@ -485,23 +488,23 @@ class SiriEtServiceTest {
         // given — 3-stop train, all rows with actualTime
         final GTFSTrain train = createTrain(59L, false);
         final GTFSTimeTableRow dep1 = createRow(train, "HKI", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI));
-        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI));
+        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, ZONE_ID_HKI);
         dep1.commercialTrack = "7";
         train.timeTableRows.add(dep1);
         final GTFSTimeTableRow arr2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
-        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
+        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, ZONE_ID_HKI);
         arr2.commercialTrack = "1";
         train.timeTableRows.add(arr2);
         final GTFSTimeTableRow dep2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
-        dep2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
+        dep2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, ZONE_ID_HKI);
         dep2.commercialTrack = "1";
         train.timeTableRows.add(dep2);
         final GTFSTimeTableRow arr3 = createRow(train, "OL", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI));
-        arr3.actualTime = ZonedDateTime.of(2026, 7, 15, 14, 2, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI));
+        arr3.actualTime = ZonedDateTime.of(2026, 7, 15, 14, 2, 0, 0, ZONE_ID_HKI);
         arr3.commercialTrack = "1";
         train.timeTableRows.add(arr3);
 
@@ -509,7 +512,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var estimatedCalls = evj.getEstimatedCalls();
         assertTrue(estimatedCalls == null || estimatedCalls.getEstimatedCalls().isEmpty());
         assertNotNull(evj.getRecordedCalls());
@@ -525,17 +528,39 @@ class SiriEtServiceTest {
         // given — stop at HKI, track "7"
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var calls = evj.getEstimatedCalls().getEstimatedCalls();
-        assertEquals("FSR:Quay:HKI-7", calls.get(0).getStopPointRef().getValue());
+        assertEquals("FSR:Quay:HKI-7", calls.getFirst().getStopPointRef().getValue());
+    }
+
+    @Test
+    void givenPlannedTrackResolvesToStopPlace_whenBuild_thenStillDetectsQuayChange() {
+        plannedTracks.put("TPE", "9");
+
+        final GTFSTrain train = createTrain(59L, false);
+        addStop(train, "HKI", null,
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
+        addStop(train, "TPE",
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI), "1");
+        addStop(train, "OL",
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
+
+        final Siri result = service.buildEtDocument(List.of(train), NOW);
+
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
+        final StopAssignmentStructure assignment = evj.getEstimatedCalls().getEstimatedCalls().get(1)
+                .getArrivalStopAssignments().getFirst();
+        assertEquals("FSR:StopPlace:TPE", assignment.getAimedQuayRef().getValue());
+        assertEquals("FSR:Quay:TPE-1", assignment.getExpectedQuayRef().getValue());
     }
 
     // --- ET-12: Unknown/null track → StopPlace ref ---
@@ -545,24 +570,24 @@ class SiriEtServiceTest {
         // given — stop at TPE, track null
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         // TPE with null track
         final GTFSTimeTableRow arr = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
         arr.commercialTrack = null;
         train.timeTableRows.add(arr);
         final GTFSTimeTableRow dep = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
         dep.commercialTrack = null;
         train.timeTableRows.add(dep);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var calls = evj.getEstimatedCalls().getEstimatedCalls();
         // TPE is second call (index 1)
         assertEquals("FSR:StopPlace:TPE", calls.get(1).getStopPointRef().getValue());
@@ -575,25 +600,25 @@ class SiriEtServiceTest {
         // given — stop at TKU, track "3" but unknownTrack=true
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         final GTFSTimeTableRow arr = createRow(train, "TKU", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 11, 0, 0, 0, ZONE_ID_HKI));
         arr.commercialTrack = "3";
         arr.unknownTrack = true;
         train.timeTableRows.add(arr);
         final GTFSTimeTableRow dep = createRow(train, "TKU", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 11, 5, 0, 0, ZONE_ID_HKI));
         dep.commercialTrack = "3";
         dep.unknownTrack = true;
         train.timeTableRows.add(dep);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var calls = evj.getEstimatedCalls().getEstimatedCalls();
         // TKU is second call (index 1); should be StopPlace since unknownTrack=true
         assertEquals("FSR:StopPlace:TKU", calls.get(1).getStopPointRef().getValue());
@@ -606,12 +631,12 @@ class SiriEtServiceTest {
         // given — stop at "XXX" (not in UIC map)
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "XXX",
-                ZonedDateTime.of(2026, 7, 15, 10, 0, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 10, 5, 0, 0, HELSINKI), "1");
+                ZonedDateTime.of(2026, 7, 15, 10, 0, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 10, 5, 0, 0, ZONE_ID_HKI), "1");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
@@ -629,30 +654,30 @@ class SiriEtServiceTest {
         // given
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         final GTFSTimeTableRow arr = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
-        arr.liveEstimateTime = ZonedDateTime.of(2026, 7, 15, 9, 33, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
+        arr.liveEstimateTime = ZonedDateTime.of(2026, 7, 15, 9, 33, 0, 0, ZONE_ID_HKI);
         arr.commercialTrack = "1";
         train.timeTableRows.add(arr);
         final GTFSTimeTableRow dep = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
-        dep.liveEstimateTime = ZonedDateTime.of(2026, 7, 15, 9, 38, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
+        dep.liveEstimateTime = ZonedDateTime.of(2026, 7, 15, 9, 38, 0, 0, ZONE_ID_HKI);
         dep.commercialTrack = "1";
         train.timeTableRows.add(dep);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final EstimatedCall call = evj.getEstimatedCalls().getEstimatedCalls().get(1); // TPE
-        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI), call.getAimedArrivalTime());
-        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 33, 0, 0, HELSINKI), call.getExpectedArrivalTime());
-        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI), call.getAimedDepartureTime());
-        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 38, 0, 0, HELSINKI), call.getExpectedDepartureTime());
+        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI), call.getAimedArrivalTime());
+        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 33, 0, 0, ZONE_ID_HKI), call.getExpectedArrivalTime());
+        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI), call.getAimedDepartureTime());
+        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 38, 0, 0, ZONE_ID_HKI), call.getExpectedDepartureTime());
     }
 
     // --- ET-16: EstimatedCall with no liveEstimate → expectedTime is null ---
@@ -662,18 +687,18 @@ class SiriEtServiceTest {
         // given
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "TPE",
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI), "1");
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI), "1");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final EstimatedCall call = evj.getEstimatedCalls().getEstimatedCalls().get(1); // TPE
         assertNull(call.getExpectedArrivalTime());
         assertNull(call.getExpectedDepartureTime());
@@ -686,31 +711,31 @@ class SiriEtServiceTest {
         // given
         final GTFSTrain train = createTrain(59L, false);
         final GTFSTimeTableRow dep1 = createRow(train, "HKI", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI));
-        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI));
+        dep1.actualTime = ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, ZONE_ID_HKI);
         dep1.commercialTrack = "7";
         train.timeTableRows.add(dep1);
         final GTFSTimeTableRow arr2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
-        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
+        arr2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, ZONE_ID_HKI);
         arr2.commercialTrack = "1";
         train.timeTableRows.add(arr2);
         final GTFSTimeTableRow dep2 = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
-        dep2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
+        dep2.actualTime = ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, ZONE_ID_HKI);
         dep2.commercialTrack = "1";
         train.timeTableRows.add(dep2);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final RecordedCall call = evj.getRecordedCalls().getRecordedCalls().get(1); // TPE
-        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, HELSINKI), call.getActualArrivalTime());
-        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, HELSINKI), call.getActualDepartureTime());
+        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, ZONE_ID_HKI), call.getActualArrivalTime());
+        assertEquals(ZonedDateTime.of(2026, 7, 15, 9, 36, 0, 0, ZONE_ID_HKI), call.getActualDepartureTime());
     }
 
     // --- ET-18: Helsinki zone correctness — UTC source emits Helsinki local ---
@@ -765,7 +790,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertEquals(true, evj.isCancellation());
     }
 
@@ -780,7 +805,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertTrue(evj.isCancellation() == null || !evj.isCancellation());
     }
 
@@ -791,30 +816,30 @@ class SiriEtServiceTest {
         // given — middle stop (TPE) rows are cancelled
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         final GTFSTimeTableRow arr = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
         arr.commercialTrack = "1";
         arr.cancelled = true;
         train.timeTableRows.add(arr);
         final GTFSTimeTableRow dep = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
         dep.commercialTrack = "1";
         dep.cancelled = true;
         train.timeTableRows.add(dep);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var calls = evj.getEstimatedCalls().getEstimatedCalls();
         // TPE is second call (index 1)
         assertEquals(true, calls.get(1).isCancellation());
         // Other calls are not cancelled
-        assertTrue(calls.get(0).isCancellation() == null || !calls.get(0).isCancellation());
+        assertTrue(calls.getFirst().isCancellation() == null || !calls.getFirst().isCancellation());
     }
 
     // ===== AREA 6 — First/last stop edge cases =====
@@ -826,18 +851,18 @@ class SiriEtServiceTest {
         // given
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var calls = evj.getEstimatedCalls().getEstimatedCalls();
-        assertNull(calls.get(0).getAimedArrivalTime()); // origin has no arrival
-        assertNotNull(calls.get(0).getAimedDepartureTime());
+        assertNull(calls.getFirst().getAimedArrivalTime()); // origin has no arrival
+        assertNotNull(calls.getFirst().getAimedDepartureTime());
     }
 
     // --- ET-24: Last stop (ARRIVAL only) → no aimed departure time ---
@@ -847,15 +872,15 @@ class SiriEtServiceTest {
         // given
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         final var calls = evj.getEstimatedCalls().getEstimatedCalls();
         final int lastIdx = calls.size() - 1;
         assertNotNull(calls.get(lastIdx).getAimedArrivalTime()); // terminus has arrival
@@ -869,15 +894,15 @@ class SiriEtServiceTest {
         // given — only origin (DEPARTURE) + terminus (ARRIVAL)
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertEquals(2, countAllCalls(evj));
     }
 
@@ -890,26 +915,26 @@ class SiriEtServiceTest {
         // given — 4-row train: middle stop has commercialStop=false
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         // Non-commercial stop
         final GTFSTimeTableRow arr = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
         arr.commercialStop = false;
         arr.commercialTrack = "1";
         train.timeTableRows.add(arr);
         final GTFSTimeTableRow dep = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
         dep.commercialStop = false;
         dep.commercialTrack = "1";
         train.timeTableRows.add(dep);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then — should be 2 calls (HKI + OL), TPE excluded
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertEquals(2, countAllCalls(evj));
     }
 
@@ -920,25 +945,25 @@ class SiriEtServiceTest {
         // given — middle stop has commercialStop=null on both rows
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         final GTFSTimeTableRow arr = createRow(train, "TPE", TimeTableRow.TimeTableRowType.ARRIVAL,
-                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI));
         arr.commercialStop = null;
         arr.commercialTrack = "1";
         train.timeTableRows.add(arr);
         final GTFSTimeTableRow dep = createRow(train, "TPE", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 9, 35, 0, 0, ZONE_ID_HKI));
         dep.commercialStop = null;
         dep.commercialTrack = "1";
         train.timeTableRows.add(dep);
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then — should be 2 calls (HKI + OL), TPE excluded
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertEquals(2, countAllCalls(evj));
     }
 
@@ -949,9 +974,9 @@ class SiriEtServiceTest {
         // given — train 999 is not resolvable by the stub JourneyRefResolver
         final GTFSTrain train = createTrain(999L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
@@ -961,9 +986,9 @@ class SiriEtServiceTest {
                 result.getServiceDelivery().getEstimatedTimetableDeliveries();
         if (deliveries != null && !deliveries.isEmpty()) {
             final List<EstimatedVersionFrameStructure> frames =
-                    deliveries.get(0).getEstimatedJourneyVersionFrames();
+                    deliveries.getFirst().getEstimatedJourneyVersionFrames();
             if (frames != null && !frames.isEmpty()) {
-                assertTrue(frames.get(0).getEstimatedVehicleJourneies().isEmpty());
+                assertTrue(frames.getFirst().getEstimatedVehicleJourneies().isEmpty());
             }
         }
         // alternatively: the entire delivery structure may be absent — also acceptable
@@ -978,14 +1003,14 @@ class SiriEtServiceTest {
         // given — 2 trains, both resolvable (both trainNumber=59 for simplicity)
         final GTFSTrain train1 = createTrain(59L, false);
         addStop(train1, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train1, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
         final GTFSTrain train2 = createTrain(59L, false);
         addStop(train2, "TPE", null,
-                ZonedDateTime.of(2026, 7, 15, 10, 0, 0, 0, HELSINKI), "1");
+                ZonedDateTime.of(2026, 7, 15, 10, 0, 0, 0, ZONE_ID_HKI), "1");
         addStop(train2, "TKU",
-                ZonedDateTime.of(2026, 7, 15, 12, 0, 0, 0, HELSINKI), null, "3");
+                ZonedDateTime.of(2026, 7, 15, 12, 0, 0, 0, ZONE_ID_HKI), null, "3");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train1, train2), NOW);
@@ -1002,14 +1027,14 @@ class SiriEtServiceTest {
         // given
         final GTFSTrain trainA = createTrain(59L, false);
         addStop(trainA, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(trainA, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
         final GTFSTrain trainB = createTrain(999L, false); // unresolvable
         addStop(trainB, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 9, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 9, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(trainB, "OL",
-                ZonedDateTime.of(2026, 7, 15, 15, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 15, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(trainA, trainB), NOW);
@@ -1028,10 +1053,10 @@ class SiriEtServiceTest {
         // given
         final GTFSTrain train = createStandard4StopTrain();
         // Add some actuals to get mixed Recorded/Estimated
-        train.timeTableRows.get(0).actualTime =
-                ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, HELSINKI);
+        train.timeTableRows.getFirst().actualTime =
+                ZonedDateTime.of(2026, 7, 15, 8, 1, 0, 0, ZONE_ID_HKI);
         train.timeTableRows.get(1).actualTime =
-                ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, HELSINKI);
+                ZonedDateTime.of(2026, 7, 15, 9, 32, 0, 0, ZONE_ID_HKI);
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
@@ -1070,7 +1095,7 @@ class SiriEtServiceTest {
         final Siri result = service.buildEtDocument(List.of(train), NOW);
 
         // then
-        final EstimatedVehicleJourney evj = getEvjs(result).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(result).getFirst();
         assertEquals(true, evj.isIsCompleteStopSequence());
     }
 
@@ -1081,12 +1106,12 @@ class SiriEtServiceTest {
         // given — one station ("XXX") not in StationUicLookup
         final GTFSTrain train = createTrain(59L, false);
         addStop(train, "HKI", null,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
         addStop(train, "XXX",
-                ZonedDateTime.of(2026, 7, 15, 10, 0, 0, 0, HELSINKI),
-                ZonedDateTime.of(2026, 7, 15, 10, 5, 0, 0, HELSINKI), "1");
+                ZonedDateTime.of(2026, 7, 15, 10, 0, 0, 0, ZONE_ID_HKI),
+                ZonedDateTime.of(2026, 7, 15, 10, 5, 0, 0, ZONE_ID_HKI), "1");
         addStop(train, "OL",
-                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+                ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
 
         // when
         final Siri result = service.buildEtDocument(List.of(train), NOW);
@@ -1098,9 +1123,9 @@ class SiriEtServiceTest {
     @Test
     void givenScheduledTrain_whenBuild_thenVehicleModeOperatorRefAndNotMonitored() {
         final GTFSTrain train = createStandard4StopTrain();
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
         assertEquals(1, evj.getVehicleModes().size());
-        assertEquals(VehicleModesEnumeration.RAIL, evj.getVehicleModes().get(0));
+        assertEquals(VehicleModesEnumeration.RAIL, evj.getVehicleModes().getFirst());
         assertEquals("FTR:Operator:vr", evj.getOperatorRef().getValue());
         assertFalse(evj.isMonitored());
     }
@@ -1110,8 +1135,8 @@ class SiriEtServiceTest {
     void givenTrainWithLiveEstimate_whenBuild_thenMonitoredTrue() {
         final GTFSTrain train = createStandard4StopTrain();
         train.timeTableRows.get(5).liveEstimateTime =
-                ZonedDateTime.of(2026, 7, 15, 14, 6, 0, 0, HELSINKI);
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+                ZonedDateTime.of(2026, 7, 15, 14, 6, 0, 0, ZONE_ID_HKI);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
         assertTrue(evj.isMonitored());
     }
 
@@ -1119,9 +1144,9 @@ class SiriEtServiceTest {
     @Test
     void givenOnTimeTrain_whenBuild_thenStatusesOnTimeAndBoardingSet() {
         final GTFSTrain train = createStandard4StopTrain();
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
         final List<EstimatedCall> calls = evj.getEstimatedCalls().getEstimatedCalls();
-        final EstimatedCall origin = calls.get(0);
+        final EstimatedCall origin = calls.getFirst();
         assertEquals(CallStatusEnumeration.ON_TIME, origin.getDepartureStatus());
         assertEquals(DepartureBoardingActivityEnumeration.BOARDING, origin.getDepartureBoardingActivity());
         assertEquals(Boolean.FALSE, origin.isRequestStop());
@@ -1135,8 +1160,8 @@ class SiriEtServiceTest {
     void givenLateDeparture_whenBuild_thenDepartureStatusDelayed() {
         final GTFSTrain train = createStandard4StopTrain();
         train.timeTableRows.get(2).liveEstimateTime = // TPE departure, 5 min late
-                ZonedDateTime.of(2026, 7, 15, 9, 40, 0, 0, HELSINKI);
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+                ZonedDateTime.of(2026, 7, 15, 9, 40, 0, 0, ZONE_ID_HKI);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
         final EstimatedCall tpe = evj.getEstimatedCalls().getEstimatedCalls().get(1);
         assertEquals(CallStatusEnumeration.DELAYED, tpe.getDepartureStatus());
     }
@@ -1146,8 +1171,8 @@ class SiriEtServiceTest {
     void givenEarlyArrival_whenBuild_thenArrivalStatusEarly() {
         final GTFSTrain train = createStandard4StopTrain();
         train.timeTableRows.get(3).liveEstimateTime = // TKU arrival, 2 min early
-                ZonedDateTime.of(2026, 7, 15, 10, 58, 0, 0, HELSINKI);
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+                ZonedDateTime.of(2026, 7, 15, 10, 58, 0, 0, ZONE_ID_HKI);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
         final EstimatedCall tku = evj.getEstimatedCalls().getEstimatedCalls().get(2);
         assertEquals(CallStatusEnumeration.EARLY, tku.getArrivalStatus());
     }
@@ -1157,7 +1182,7 @@ class SiriEtServiceTest {
     void givenTrailingStopCancelled_whenBuild_thenBoundaryAndCancelledStatuses() {
         final GTFSTrain train = createStandard4StopTrain();
         train.timeTableRows.get(5).cancelled = true; // cancel the terminus (OL arrival)
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
         final List<EstimatedCall> calls = evj.getEstimatedCalls().getEstimatedCalls();
         final EstimatedCall tku = calls.get(2); // last served stop before the cancelled terminus
         assertEquals(CallStatusEnumeration.CANCELLED, tku.getDepartureStatus());
@@ -1173,7 +1198,7 @@ class SiriEtServiceTest {
     void givenUnknownDelay_whenBuild_thenCallPredictionInaccurate() {
         final GTFSTrain train = createStandard4StopTrain();
         train.timeTableRows.get(2).unknownDelay = true; // TPE departure
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
         final EstimatedCall tpe = evj.getEstimatedCalls().getEstimatedCalls().get(1);
         assertEquals(Boolean.TRUE, tpe.isPredictionInaccurate());
     }
@@ -1183,16 +1208,16 @@ class SiriEtServiceTest {
     @Test
     void givenNamedStations_whenBuild_thenOriginDestinationAndStopNamesEmitted() {
         final GTFSTrain train = createStandard4StopTrain(); // HKI, TPE, TKU, OL — all future → estimated calls
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
 
-        assertEquals("Helsinki", evj.getOriginNames().get(0).getValue());
-        assertEquals("Oulu", evj.getDestinationNames().get(0).getValue());
+        assertEquals("Helsinki", evj.getOriginNames().getFirst().getValue());
+        assertEquals("Oulu", evj.getDestinationNames().getFirst().getValue());
 
         final List<EstimatedCall> calls = evj.getEstimatedCalls().getEstimatedCalls();
-        assertEquals("Helsinki", calls.get(0).getStopPointNames().get(0).getValue());
-        assertEquals("Tampere", calls.get(1).getStopPointNames().get(0).getValue());
-        assertEquals("Turku", calls.get(2).getStopPointNames().get(0).getValue());
-        assertEquals("Oulu", calls.get(3).getStopPointNames().get(0).getValue());
+        assertEquals("Helsinki", calls.getFirst().getStopPointNames().getFirst().getValue());
+        assertEquals("Tampere", calls.get(1).getStopPointNames().getFirst().getValue());
+        assertEquals("Turku", calls.get(2).getStopPointNames().getFirst().getValue());
+        assertEquals("Oulu", calls.get(3).getStopPointNames().getFirst().getValue());
     }
 
     @Test
@@ -1201,7 +1226,7 @@ class SiriEtServiceTest {
                 shortCode -> Optional.empty(),
                 (trainNumber, date, shortCode) -> Optional.empty());
         final GTFSTrain train = createStandard4StopTrain();
-        final EstimatedVehicleJourney evj = getEvjs(noNames.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(noNames.buildEtDocument(List.of(train), NOW)).getFirst();
 
         assertTrue(evj.getOriginNames().isEmpty());
         assertTrue(evj.getDestinationNames().isEmpty());
@@ -1216,11 +1241,11 @@ class SiriEtServiceTest {
     void givenPlannedTrackDiffersFromActual_whenBuild_thenStopAssignmentEmitted() {
         plannedTracks.put("TPE", "2"); // planned quay TPE-2; the train's actual TPE track is "1"
         final GTFSTrain train = createStandard4StopTrain();
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
 
         final EstimatedCall tpe = evj.getEstimatedCalls().getEstimatedCalls().get(1);
         assertEquals(1, tpe.getArrivalStopAssignments().size());
-        final StopAssignmentStructure assignment = tpe.getArrivalStopAssignments().get(0);
+        final StopAssignmentStructure assignment = tpe.getArrivalStopAssignments().getFirst();
         assertEquals("FSR:Quay:TPE-2", assignment.getAimedQuayRef().getValue());
         assertEquals("FSR:Quay:TPE-1", assignment.getExpectedQuayRef().getValue());
         // StopPointRef stays the actual (expected) quay.
@@ -1231,7 +1256,7 @@ class SiriEtServiceTest {
     void givenPlannedTrackEqualsActual_whenBuild_thenNoStopAssignment() {
         plannedTracks.put("TPE", "1"); // same as the actual TPE track → no change
         final GTFSTrain train = createStandard4StopTrain();
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
 
         final EstimatedCall tpe = evj.getEstimatedCalls().getEstimatedCalls().get(1);
         assertTrue(tpe.getArrivalStopAssignments().isEmpty());
@@ -1241,7 +1266,7 @@ class SiriEtServiceTest {
     @Test
     void givenNoPlannedTrack_whenBuild_thenNoStopAssignment() {
         final GTFSTrain train = createStandard4StopTrain(); // plannedTracks empty by default
-        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).get(0);
+        final EstimatedVehicleJourney evj = getEvjs(service.buildEtDocument(List.of(train), NOW)).getFirst();
 
         for (final EstimatedCall call : evj.getEstimatedCalls().getEstimatedCalls()) {
             assertTrue(call.getArrivalStopAssignments().isEmpty());
@@ -1270,8 +1295,8 @@ class SiriEtServiceTest {
     @Test
     void givenMixedActuals_whenBuildWithStats_thenRecordedEstimatedSplit() {
         final GTFSTrain train = createStandard4StopTrain();
-        train.timeTableRows.get(0).actualTime = ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI); // HKI dep
-        train.timeTableRows.get(1).actualTime = ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, HELSINKI); // TPE arr
+        train.timeTableRows.getFirst().actualTime = ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI); // HKI dep
+        train.timeTableRows.get(1).actualTime = ZonedDateTime.of(2026, 7, 15, 9, 30, 0, 0, ZONE_ID_HKI); // TPE arr
         final SiriEtStats stats = service.buildEtDocumentWithStats(List.of(train), NOW).stats();
 
         assertEquals(2, stats.callsRecorded()); // HKI, TPE
@@ -1292,8 +1317,8 @@ class SiriEtServiceTest {
     @Test
     void givenUnresolvableJourney_whenBuildWithStats_thenSkippedUnresolvedJourney() {
         final GTFSTrain train = createTrain(999L, false); // resolver only knows train 59
-        addStop(train, "HKI", null, ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "7");
-        addStop(train, "OL", ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+        addStop(train, "HKI", null, ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "7");
+        addStop(train, "OL", ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
         final SiriEtStats stats = service.buildEtDocumentWithStats(List.of(train), NOW).stats();
 
         assertEquals(0, stats.journeysEmitted());
@@ -1304,8 +1329,8 @@ class SiriEtServiceTest {
     @Test
     void givenUnresolvableStop_whenBuildWithStats_thenSkippedUnresolvedStop() {
         final GTFSTrain train = createTrain(59L, false);
-        addStop(train, "XXX", null, ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI), "1"); // not in UIC map
-        addStop(train, "OL", ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+        addStop(train, "XXX", null, ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI), "1"); // not in UIC map
+        addStop(train, "OL", ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
         final SiriEtStats stats = service.buildEtDocumentWithStats(List.of(train), NOW).stats();
 
         assertEquals(0, stats.journeysEmitted());
@@ -1318,10 +1343,10 @@ class SiriEtServiceTest {
     void givenUnknownTrack_whenBuildWithStats_thenStopPlaceCounted() {
         final GTFSTrain train = createTrain(59L, false);
         final GTFSTimeTableRow hkiDep = createRow(train, "HKI", TimeTableRow.TimeTableRowType.DEPARTURE,
-                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, HELSINKI));
+                ZonedDateTime.of(2026, 7, 15, 8, 0, 0, 0, ZONE_ID_HKI));
         hkiDep.unknownTrack = true; // → FSR:StopPlace fallback
         train.timeTableRows.add(hkiDep);
-        addStop(train, "OL", ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, HELSINKI), null, "1");
+        addStop(train, "OL", ZonedDateTime.of(2026, 7, 15, 14, 0, 0, 0, ZONE_ID_HKI), null, "1");
         final SiriEtStats stats = service.buildEtDocumentWithStats(List.of(train), NOW).stats();
 
         assertEquals(1, stats.journeysEmitted());
